# calflops

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  test_llm_huggingface.py
calflops/: __init__.py  calculate_pipeline.py  constants.py  estimate.py  flops_counter.py  flops_counter_hf.py  pytorch_ops.py  utils.py
examples/: bert.py  cnn.py  huggingface_bgem3.py  llama.py
